# rust-docker

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  logs-latest.md
.cargo/: config.toml
src/: main.rs
