[package]
name = "garnet-bug-repro"
version = "1.0.0"
authors = ["Paul Szabo <paul@umlss.com>"]
edition = "2018"

[profile.release]
incremental = true

[profile.dev]
incremental = true

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
async-trait="0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.19"
bytes = "1"
memchr = "2.7.4"
redis = { version = "*", features = ["tokio-comp"] }
uuid = { version = "^1.11.0", features = ["v4", "v5"]}
arrayvec = "0.7.6"
deadpool-redis = { version ="0.18", features = ['rt_tokio_1'] }

[dev-dependencies]
